fixed alignment for mobile

--- a/src/pages/ForgotPassword/ForgotPassword.scss
+++ b/src/pages/ForgotPassword/ForgotPassword.scss
@@ -45,3 +45,10 @@
 //     width: 100%;
 //     background-color: white;
 //   }
+
+.signup-link{
+    float: left;
+  }
+  .forgot-password-link{
+    float: right;
+  }
